# dhd

./: .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  MISSING_FEATURES.md  PACKAGE_MANAGERS.md  README.md  TODO.txt  build.rs  dagger.json  package.json  rawkOS  tauri.conf.json  vite.config.js
.dagger/: arch.go  debian.go  go.mod  main.go
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy-docs.yml  docs-deploy.yml  docs-preview.yml  release-checklist.yml  release.yaml  release.yml  test.yml
dhd-macros/: Cargo.toml
dhd-macros/src/: lib.rs  typescript_enum.rs
docs/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
examples/: 1password-secrets.ts  conditional_module.ts  copyFile.ts  dconfImport.ts  dev-environment-1password.ts  directory.ts  docker-with-privilege.ts  docker.ts  executeCommand.ts  fileWrite.ts  gitConfig.ts  github_releases.ts  httpDownload.ts  linkDotfile.ts  packageInstall.ts  platform-select-example.ts  platform_select.ts  systemd.ts  systemdManage.ts  systemdService.ts  systemdSocket.ts  systemdTyped.ts  tag_filtering_demo.ts  test-directory.ts  test_condition.ts  user-context.ts  userGroup-with-context.ts  withDependency.ts
src/: action.rs  atom.rs  config.rs  dag.rs  dag_executor.rs  dependency_resolver.rs  discovery.rs  error.rs  execution.rs  lib.rs  loader.rs  main.rs  platform.rs  system_info.rs  typescript.rs
src/actions/: compat.rs  condition.rs  conditional.rs  copy_file.rs  dconf_import.rs  directory.rs  execute_command.rs  git_config.rs  gnome_extensions.rs  http_download.rs  link_directory.rs  link_dotfile.rs  link_file.rs  mod.rs  package_install.rs  package_install_v2.rs  package_remove.rs  systemd_manage.rs  systemd_service.rs  systemd_socket.rs  user_group.rs
src/atoms/: compat.rs  copy_file.rs  create_directory.rs  dconf_import.rs  file.rs  file_write.rs  git_config.rs  gnome_extension.rs  http_download.rs  install_packages.rs  install_packages_v2.rs  link_dotfile.rs  link_file.rs  mod.rs  package_install.rs  remove_packages.rs  run_command.rs  symlink.rs  symlink_file.rs  systemd_manage.rs  systemd_service.rs  systemd_socket.rs  systemd_unit_builder.rs
src/commands/: apply.rs  list.rs  mod.rs  plan.rs  tui.rs
src/gui/: commands.rs  mod.rs
src/module/: mod.rs
src/modules/: ast_parser.rs  loader.rs  mod.rs  parser.rs  registry.rs
src/secrets/: mod.rs  onepassword.rs
src/tui/: app.rs  mod.rs  (+2 more)
tests/: action_integration.rs  ast_parser_test.rs  atuin_module_test.rs  cli_integration.rs  cli_module_filtering.rs  condition_parsing_tests.rs  condition_tests.rs  conditional_execution_tests.rs  dependency_cli_test.rs  execution_integration.rs  git_config_integration_test.rs  git_config_module_test.rs  github_provider_tests.rs  module_dependency_test.rs  module_loading_integration.rs  specific_module_execution.rs
types/: README.md  actions.ts  deno.json  index.ts  modules.ts  package.json
web/: app.js  index.html  styles.css
(+48 files in other folders)
