[package]
name = "dhd"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
linkme = "0.3"
dhd-macros = { path = "dhd-macros" }
oxc_parser = "0.22"
oxc_ast = "0.22"
oxc_span = "0.22"
oxc_allocator = "0.22"
indicatif = "0.17"
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
rayon = "1.8"
once_cell = "1.19"
which = "6.0"
os_info = "3.7"
sysinfo = "0.30"
gix-config = "0.40"
bstr = "1.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
